# PFA_Analyzer

./: .gitignore  .gitignore_global  ChamberOFF_MWGR4_342218.txt  PFA_Analyzer.py  PFA_Analyzer_GE21.py  PFA_Analyzer_Segments.py  PFA_Output_210622_2123.root  README.md  execute.sh  extractFromNTuples.py  pyproject.toml
CondorSub/: runJobs.py  runJobs_GE21.py
ExcludeMe/: ChamberOFF_CRUZET_342810.txt  ChamberOFF_CRUZET_342966.txt  ChamberOFF_CRUZET_343034.txt  ChamberOFF_CRUZET_343082.txt  ChamberOFF_CRUZET_343171.txt  ChamberOFF_CRUZET_343266.txt  ChamberOFF_CRUZET_343387.txt  ChamberOFF_CRUZET_343496.txt  ChamberOFF_CRUZET_343498.txt  ChamberOFF_CRUZET_343621.txt  ChamberOFF_CRUZET_343625.txt  ChamberOFF_CRUZET_343642.txt  ChamberOFF_CRUZET_343677.txt  ChamberOFF_CRUZET_343774.txt  ChamberOFF_CRUZET_343862.txt  ChamberOFF_CRUZET_343937.txt  ChamberOFF_CRUZET_344001.txt  ChamberOFF_CRUZET_344063.txt  ChamberOFF_CRUZET_344064.txt  ChamberOFF_CRUZET_344068.txt  ChamberOFF_CRUZET_344134.txt  ChamberOFF_CRUZET_344186.txt  ChamberOFF_CRUZET_344266.txt  ChamberOFF_CRUZET_344366.txt  ChamberOFF_CRUZET_344420.txt  ChamberOFF_CRUZET_344421.txt  ChamberOFF_CRUZET_344423.txt  ChamberOFF_CRUZET_344518.txt  ChamberOFF_CRUZET_344566.txt  ChamberOFF_CRUZET_344632.txt  ChamberOFF_CRUZET_344679.txt  ChamberOFF_CRUZET_344681.txt  ChamberOFF_CRUZET_344817.txt  ChamberOFF_CRUZET_344824.txt  ChamberOFF_CRUZET_344859.txt  ChamberOFF_CRUZET_344891.txt  ChamberOFF_CRUZET_HVScan.txt  ChamberOFF_MWGR3_341343.txt  ChamberOFF_Run_357329.json  ChamberOFF_Run_357330.json  (+57 more)
Output/: .gitignore
(+66 files in other folders)
